feat: add admin discard dependency flow and TS45 coverage